# llm-manim

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: api-contract.md  architecture.md  database-migrations.md  developer-guide.md  frontend-implementation.md  golden-prompts-manual-acceptance.md  index.md  initialization.md  llm-orchestration.md  logging-observability.md  prompt-contract.md  prompt-optimization.md  provider-configuration.md  provider-protocol.md  references-packaging.md  release-packaging.md  render-pipeline.md  runtime-installation.md  runtime-management.md  security-boundary.md  spec.md  static-checker.md  tech-stack.md  test-plan.md  troubleshooting.md  ui-design.md  ui-wireframes.md  user-guide.md  v1-release-readiness-report.md  workflow-evaluation.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_provider_configs.sql  003_prompt_jobs.sql  004_render_artifacts.sql  005_provider_soft_delete.sql  006_prompt_job_soft_delete.sql  007_generation_settings.sql
src-tauri/src/: lib.rs  main.rs  state.rs  static_checker.py
src-tauri/src/commands/: job.rs  mod.rs  ping.rs  project.rs  provider.rs  settings.rs  workspace.rs
src-tauri/src/services/: artifact.rs  db.rs  logging.rs  manim_compat.rs  mod.rs  orchestrator.rs  prompt.rs  provider.rs  queue.rs  redact.rs  render.rs  static_checker.rs  workspace.rs
src-tauri/src/types/: error_codes.rs  mod.rs  response.rs
(+58 files in other folders)
